# raizes-do-nordeste-backend-uninter

./: .env.example  .gitignore  Makefile  README.md  docker-compose.development.yml  pyproject.toml  ruff.toml
docs/: ARCHITECTURE.md  CLASSES.md  DER.md  FLOW.md  USE_CASES.md
migrations/: env.py
migrations/versions/: 3f4a8d6b9c21_rename_order_channel_balcao_to_counter.py  48789791f9e6_remove_unit_from_products.py  6f2a1b9c8d30_add_product_categories.py  9b2c4d7e8f10_add_is_active_to_users.py  a7d4c2e9b1f0_allow_anonymous_orders.py  c4c542a2213a_add_business_domain_models.py  fb0c331dd2af_add_user_model.py
scripts/: format.sh  lint.sh
src/: api.py  app.py  config.py  database.py  exceptions.py  mail.py  middlewares.py  models.py  on_startup.py  schemas.py  security.py  storage.py  utils.py  worker.py
src/audit/: models.py  service.py
src/auth/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/inventory/: exceptions.py  models.py  router.py  schemas.py  service.py
src/loyalty/: exceptions.py  models.py  router.py  schemas.py  service.py
src/orders/: exceptions.py  models.py  router.py  schemas.py  service.py
src/payments/: exceptions.py  models.py  router.py  schemas.py  service.py
src/privacy/: exceptions.py  models.py  service.py
src/products/: exceptions.py  models.py  router.py  schemas.py  service.py
src/promotions/: exceptions.py  models.py  router.py  schemas.py  service.py
src/templates/: user_request_reset_password.py  user_verify_email.py
src/tests/: conftest.py  test_auth_router.py  test_health.py  (+11 more)
(+5 files in other folders)
