[project]
name = "raizes-do-nordeste-backend-uninter"
version = "0.1.0"
description = "Backend para o projeto Raízes do Nordeste da Uninter."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = ["ruff>=0.15.14"]

[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = ["migrations", ".venv", "__pycache__"]

[tool.ruff.lint]
extend-select = ["E501"]
