[project]
name = "raizes-do-nordeste-backend-uninter"
version = "0.1.0"
description = "Backend para o projeto Raízes do Nordeste da Uninter."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asgiref>=3.11.1",
    "asyncpg>=0.31.0",
    "bcrypt>=4.1.0",
    "celery>=5.6.3",
    "fastapi>=0.136.3",
    "fastapi-mail>=1.6.4",
    "flower>=2.0.1",
    "greenlet>=3.5.1",
    "itsdangerous>=2.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.20",
    "redis>=8.0.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]
